secondfile/objects/Rates__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Rate_PHI__r.Account__r.Id</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_Discounted__c</fullName>
        <formula>IF(ISPICKVAL(Rate_PHI__r.Discount_Plan_Status__c ,&apos;Create Discount Plan Successful&apos;),true,false )</formula>
        <label>Already Discounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Rate_Plan_PBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Rate Plan PBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Display_Name__c</fullName>
        <label>Bill Display Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element_Category__c</fullName>
        <label>Billing Element Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element_Description__c</fullName>
        <label>Billing Element Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element__c</fullName>
        <label>Billing Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Plan_ID__c</fullName>
        <label>CIM Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>CI_SFDC_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Component_Service_Type__c</fullName>
        <label>Component Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Code_1__c</fullName>
        <label>Determinant Code 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Code_2__c</fullName>
        <label>Determinant Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Code_3__c</fullName>
        <label>Determinant Code 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Description_1__c</fullName>
        <label>Determinant Description  1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Description_2__c</fullName>
        <label>Determinant Description  2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Description_3__c</fullName>
        <label>Determinant Description  3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_String__c</fullName>
        <label>Determinant String</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Determinant_Super_Set_ID__c</fullName>
        <label>Determinant Super Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_1__c</fullName>
        <label>Determinant Value  1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_2__c</fullName>
        <label>Determinant Value  2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_3__c</fullName>
        <label>Determinant Value  3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_Description_1__c</fullName>
        <label>Determinant Value Description  1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_Description_2__c</fullName>
        <label>Determinant Value Description  2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Value_Description_3__c</fullName>
        <label>Determinant Value Description  3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Already__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discounted Already</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Determinant_Set_ID__c</fullName>
        <label>Fixed Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Determinant_Super_Set_ID__c</fullName>
        <label>Fixed Determinant Super Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Father_Date__c</fullName>
        <label>Grand Father Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Level__c</fullName>
        <label>High Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRateSyncSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRateSyncSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Level__c</fullName>
        <label>Low Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_PBI_Id__c</fullName>
        <label>Old PBI Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Name__c</fullName>
        <label>PBI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Number__c</fullName>
        <label>PBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI_Id_onTier__c</fullName>
        <formula>Rate_PHI__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PHI Id onTier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Amount__c</fullName>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RatePHIRecord__c</fullName>
        <formula>Rate_PHI__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RatePHIRecord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_PHI_Term__c</fullName>
        <formula>Rate_PHI__r.Term__c</formula>
        <label>Rate-PHI-Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_PHI__c</fullName>
        <label>SFDC-PHI</label>
        <referenceTo>Rate_PHI__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Id_Technical__c</fullName>
        <formula>Rate_PHI__r.Rate_Plan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Plan Id Technical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <label>Rate Plan Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Code__c</fullName>
        <label>Rate Stability Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sync_Error_Description__c</fullName>
        <label>Rate Sync Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sync_Status__c</fullName>
        <formula>IF( Ready_for_Sync__c = true,TEXT(Rate_PHI__r.Rate_Sync_Status__c),&apos;&apos;)</formula>
        <label>Rate Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retrigger_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrigger Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Push_PBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA-Push PBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOC_Country_Code__c</fullName>
        <label>SOC Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surcharge_Amount__c</fullName>
        <label>Surcharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Amount__c</fullName>
        <label>Temp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Amount_to_copy__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Test Amount to copy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Rate_Method__c</fullName>
        <label>Unit Rate Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesale_Master_Rate_Card_Approved__c</fullName>
        <formula>Rate_PHI__r.Wholesale_Master_Rate_Card_Approved__c</formula>
        <label>Wholesale Master Rate Card Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTierStatusFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTierStatusFailed</label>
        <type>Checkbox</type>
    </fields>
    <label>Rates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Rate_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>BEID__c</columns>
        <columns>Bill_Display_Name__c</columns>
        <columns>Component_Service_Type__c</columns>
        <columns>Determinant_Set_ID__c</columns>
        <columns>PBI_Number__c</columns>
        <columns>PBI_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rates-{000000}</displayFormat>
        <label>Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>